fix styles on mobile devices

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -13,7 +13,7 @@
 }
 
 body {
-  max-width: available !important;
+  min-width: fit-content !important;
 }
 
 .ctn {
